Fixed css bug in chrome with visible corners on draggable elements, fixed css bug on hiddenColors in Firefox

--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,9 @@
   justify-content: center;
   height: 70px;
   width: 70px;
-border-radius: 100%;
-margin: 5px;
+  border-radius: 50%;
+  margin: 5px;
+  transform: translate(0, 0);
 }
 
 .infoBoard{
@@ -99,6 +100,7 @@ margin: 5px;
 .spielfiguren{
   box-shadow: 0 1px grey;
   opacity: 1.5;
+  transform: translate(0, 0);
 }
 
 .spielfiguren:hover{
@@ -139,17 +141,17 @@ margin: 5px;
 }
 
 .hits{
-height: 75px;
-width: 75px;
-border: 1px solid black;
-border-radius: 5px;
-margin-left: 50px;
-margin-right: 20px;
-display: grid;
-grid-template-columns: auto auto;
-grid-template-rows: auto auto;
-align-items: center;
-justify-items: center;
+  height: 75px;
+  width: 75px;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin-left: 50px;
+  margin-right: 20px;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  align-items: center;
+  justify-items: center;
 }
 
 .square{
@@ -164,16 +166,16 @@ justify-items: center;
   border-top: 30px solid transparent;
   border-bottom: 30px solid transparent;
   border-left: 30px solid rgb(34, 1, 3);
-margin-left: 20px;
+  margin-left: 20px;
 }
 
 .hiddenColorsContainer{
-flex-grow: 1;
-align-items: center;
-margin-top: 0;
-display: flex;
-flex-direction: column-reverse;
-letter-spacing:2px;
+  flex-grow: 1;
+  align-items: center;
+  margin-top: 0;
+  display: flex;
+  flex-direction: column-reverse;
+  letter-spacing:2px;
 }
 
 .loading{
@@ -185,15 +187,15 @@ letter-spacing:2px;
 }
 
 .hiddenColorsBoard{
-display: flex;
-height: 120px;
-width: 80%;
-color: white;
-background-color: #ab3c3c;
-justify-content: center;
-align-items: center;
-border-bottom-right-radius: 15%; 
-border-bottom-left-radius: 15%; 
+  display: flex;
+  height: 120px;
+  width: 80%;
+  color: white;
+  background-color: #ab3c3c;
+  justify-content: center;
+  align-items: center;
+  border-bottom-right-radius: 15%; 
+  border-bottom-left-radius: 15%; 
 }
 
 .hiddenColors{
@@ -206,7 +208,7 @@ border-bottom-left-radius: 15%;
     transform: translateY(0px)
   }
   100%{    
-    transform: translateY(-90px)
+    transform: translateY(-85px)
   }
 }
 
@@ -225,4 +227,10 @@ border-bottom-left-radius: 15%;
   100%{    
     transform: translateY(-120px)
   }
+}
+
+@-moz-document url-prefix() {
+    .gameRow-moz{
+      margin-bottom: -3px;
+    }
 }
